2003-10-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.15.0

2003-10-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.14.3, a beta release
	for folks testing 10.2-gcc3.3 (and 10.3)

2003-10-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.14.2, a bugfix
	release on the 0.14.0 branch

2003-10-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.14.1, a beta release
	for folks testing 10.2-gcc3.3 (and 10.3)

2003-10-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.14.0

2003-10-06  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink.8.in, fink.conf.in: Update manpages for selfupdate with rsync.

2003-10-01  Rob Braun <bbraun@users.sourceforge.net>

	* fink.conf.5.in: Add selfupdate-rsync option for updating 
	via rsync instead of cvs.

2003-09-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.9, a beta release on 
	the test-10.3 branch 

2003-09-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.8

2003-09-17  Dave Vasilevsky <vasi@users.sourceforge.net>

	* Mirror.pm: Fix master:master:master: bug
	* Package.pm, Services.pm: Stop Fink from choking on .debs
	without revisions (which do not come from Fink), as per dpkg
	spec.

2003-09-08  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink-virtual-pkgs.in: Allow Provides, and don't propogate
	builddependsonly virtual packages to apt/dpkg.

2003-09-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in: set up the dists symlink correctly for any
	post-10.1 distribution

2003-08-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.7; this release