@@ -218,7 +218,7 @@ EOF
   find ({ wanted => $wanted, follow => 1,  no_chdir => 1 }, "$basepath/fink/10.1");
 }
 
-### Now, if we are running 10.2, we need to create $basepath/fink/10.2 if
+### Now, if we are running 10.2 or later, we need to create $basepath/fink/10.2 if
 ### still needed, and then make a symlink
 
 if (not $distribution =~ /10.1/) {
@@ -237,7 +237,44 @@ if (not $distribution =~ /10.1/) {
     print "ERROR: Can't create link from $distribution to $distdir\n";
     exit 1;
   }
+ 
+  ### Now we modify the apt-get config file if needed...
+  ###
+
+  if (-f $aptfile) {
+      open (INPUT, $aptfile) or die "couldn't read $aptfile: $!\n";
+      open (OUTPUT, ">$aptfile.new") or die "couldn't write $aptfile.new: $!\n";
+
+      my $changed = 0;
+      while (<INPUT>) {
+	  if (s,(deb http://us.dl.sourceforge.net/fink/direct_download )(1.*)/,$1$distribution/,) {
+	      $changed++ if ($2 ne $distribution);
+	  }
+	  print OUTPUT;
+      }
+	  close(OUTPUT);
+	  close(INPUT);
+
+	  if ($changed) {
+	      my $updatequestion= &prompt_boolean("\nYour apt/sources.list file needs to be updated".
+" to match your current Fink distribution $distribution.  Would you like".
+						  " to update this file now?",1);
+	      if ($updatequestion) {
+		  if (&execute("mv $aptfile.new $aptfile")){
+		      print "ERROR: Can't move $aptfile.new to $aptfile\n";
+		      exit 1;
+		  }
+	      } else {
+		  if (&execute("rm $aptfile.new")){
+		      print "ERROR: Can't remove $aptfile.new\n";
+		      exit 1;
+		  }
+	      }
+	  }
+  }
 }
+
+
 
 exit 0;
 
